added activity period info to dto
