# swagger_server/models/route.py
@@ -14,7 +14,7 @@ class Route(Model):
     NOTE: This class is auto generated by the swagger code generator program.
     Do not edit the class manually.
     """
-    def __init__(self, id: str=None, agent_type: str=None, route_number: str=None, departure_station: Station=None, departure_time: str=None, arrival_station: Station=None, arrival_time: str=None, travel_time: str=None, periodicity: str=None, route_points: List[RoutePoint]=None):
+    def __init__(self, id: str=None, agent_type: str=None, route_number: str=None, departure_station: Station=None, departure_time: str=None, arrival_station: Station=None, arrival_time: str=None, travel_time: str=None, periodicity: str=None, activity_period_start: str=None, activity_period_end: str=None, route_points: List[RoutePoint]=None):
         """
         Route - a model defined in Swagger
 
@@ -36,6 +36,10 @@ class Route(Model):
         :type travel_time: str
         :param periodicity: The periodicity of this Route.
         :type periodicity: str
+        :param activity_period_start: The activity_period_start of this Route.
+        :type activity_period_start: str
+        :param activity_period_end: The activity_period_end of this Route.
+        :type activity_period_end: str
         :param route_points: The route_points of this Route.
         :type route_points: List[RoutePoint]
         """
@@ -49,6 +53,8 @@ class Route(Model):
             'arrival_time': str,
             'travel_time': str,
             'periodicity': str,
+            'activity_period_start': str,
+            'activity_period_end': str,
             'route_points': List[RoutePoint]
         }
 
@@ -62,6 +68,8 @@ class Route(Model):
             'arrival_time': 'arrival_time',
             'travel_time': 'travel_time',
             'periodicity': 'periodicity',
+            'activity_period_start': 'activity_period_start',
+            'activity_period_end': 'activity_period_end',
             'route_points': 'route_points'
         }
 
@@ -74,6 +82,8 @@ class Route(Model):
         self._arrival_time = arrival_time
         self._travel_time = travel_time
         self._periodicity = periodicity
+        self._activity_period_start = activity_period_start
+        self._activity_period_end = activity_period_end
         self._route_points = route_points
 
     @classmethod
@@ -276,6 +286,48 @@ class Route(Model):
         """
 
         self._periodicity = periodicity
+
+    @property
+    def activity_period_start(self) -> str:
+        """
+        Gets the activity_period_start of this Route.
+
+        :return: The activity_period_start of this Route.
+        :rtype: str
+        """
+        return self._activity_period_start
+
+    @activity_period_start.setter
+    def activity_period_start(self, activity_period_start: str):
+        """
+        Sets the activity_period_start of this Route.
+
+        :param activity_period_start: The activity_period_start of this Route.
+        :type activity_period_start: str
+        """
+
+        self._activity_period_start = activity_period_start
+
+    @property
+    def activity_period_end(self) -> str:
+        """
+        Gets the activity_period_end of this Route.
+
+        :return: The activity_period_end of this Route.
+        :rtype: str
+        """
+        return self._activity_period_end
+
+    @activity_period_end.setter
+    def activity_period_end(self, activity_period_end: str):
+        """
+        Sets the activity_period_end of this Route.
+
+        :param activity_period_end: The activity_period_end of this Route.
+        :type activity_period_end: str
+        """
+
+        self._activity_period_end = activity_period_end
 
     @property
     def route_points(self) -> List[RoutePoint]:
